Wed Aug 03 15:25:07 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Added french language file (TODO most of the plugins just talk english)
	* The way the Enum configs were set up, it wasn't possible to add language
	files to rbot at runtime (the directory was only scanned at startup). Now
	you can set a values Proc, which is called to return a list of allowed
	values whenever it's queried.
	* Added Config module for determining where we were installed.
	Unfortunately rubygems is a total whore in this regard, and I hope the
	current hackery I have to do to support it becomes redundant in the
	future.

Wed Aug 03 00:31:41 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Added Rakefile, tweaked gemspec

Tue Aug 02 16:27:36 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed the new http.proxy* settings, they work!
	* Fixed a bug with auth-checking for the config module
	* misc tweaks

Sun Jul 31 02:20:08 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Updated docgen to generate rdoc again with the new repo structure
	* added new restart command to the core bot, quits irc and reexecs the
	bot, to pick up new code/libraries etc.

Sat Jul 30 22:33:36 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Config items are now objects, various types are available.
	* The config wizard will now use registered config items if :wizard is set
    to true for those items. It will ask questions in the order they were
		registered.
	* The config module now works for doing runtime configuration.
	* misc refactoring

Sat Jul 30 01:19:32 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * config module for configuring the running bot via IRC
	* BotConfig.register method for various modules and any plugin to register
	bot configuration which the new config module will expose for them.
	* various other tweaks as I continue to refactor..

Fri Jul 29 13:07:56 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Moved some stuff out of util.rb into the plugins that actually need